# cara-v2

./: .gitignore  CLAUDE.md  Noxlin Carousel Templates (standalone).html  Noxlin Carousel Templates.html  README.md  build_templates.py  pyproject.toml  requirements.txt  run_local_dashboard.py  template.html
.claude/: launch.json  settings.local.json
app/: __init__.py  bootstrap.py  config.py  dependencies.py  domain.py  main.py  repositories.py  schemas.py
app/api/routes/: agent_stream.py  auth.py  carousels.py  dashboard.py  profile.py  templates.py
app/builtin_templates/nox-cta/: template_manifest.json
app/builtin_templates/nox-cta/variants/: content.html  cover.html
app/builtin_templates/nox-grad/: render.html  template_manifest.json
app/builtin_templates/nox-grad/variants/: content.html
app/builtin_templates/nox-grid/: head.html  render.html  template_manifest.json
app/builtin_templates/nox-grid/variants/: content.html
app/builtin_templates/nox-mono/: styles.css  template_manifest.json
app/builtin_templates/nox-num/: template_manifest.json
app/builtin_templates/nox-paper/: render.html  template_manifest.json
app/builtin_templates/nox-quote/: template_manifest.json
app/services/: __init__.py  agent_events.py  agents.py  ai_clients.py  carousel_service.py  image_generation.py  linkedin_auth.py  linkedin_publishing.py  orchestrator.py  renderer.py  template_ingestion.py  user_profile.py
app/tools/: __init__.py  import_ln_tool_gallery.py
app/ui/: dashboard.html  linkedin_callback.html  settings.html
(+7 files in other folders)
